--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,8 +20,11 @@
         app:itemIconSize="30dp"
         app:labelVisibilityMode="selected"
         app:itemTextColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:itemIconTint="@color/black"/>
-    tools:context=".screens.fragments.MainScreenFragment">
+
 
     <TextView
         android:id="@+id/firstHeading"
@@ -46,7 +49,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:cardUseCompatPadding="true"
         app:cardCornerRadius="20dp"
-   >
+        >
         <androidx.appcompat.widget.SearchView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -55,11 +58,11 @@
             />
 
 
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 
 
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
