--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -11,15 +11,15 @@
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="30dp"
-        android:elevation="2dp"
+        android:layout_margin="20dp"
+        android:elevation="8dp"
         app:menu="@menu/item_menu"
         android:background="@drawable/round_corner"
         app:itemRippleColor="@color/transparent"
-        app:itemIconSize="30dp"
+        app:itemIconSize="24dp"
         app:labelVisibilityMode="selected"
         app:itemTextColor="@color/black"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -33,14 +33,16 @@
         android:fontFamily="@font/roboto"
         android:text="Where do\nyou want to go?"
         android:textColor="@color/black"
-        android:textSize="32sp"
+        android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="20dp"
         android:layout_marginTop="4dp"
         />
+
     <androidx.cardview.widget.CardView
+        android:id="@+id/searchCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
@@ -51,6 +53,7 @@
         app:cardCornerRadius="20dp"
         >
         <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:queryHint="Search for places..."
@@ -61,8 +64,24 @@
     </androidx.cardview.widget.CardView>
 
 
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
+    app:layout_constraintTop_toBottomOf="@id/searchCardView"
+>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
 
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
